--- a/index.html
+++ b/index.html
@@ -76,7 +76,34 @@
         </div>
     </section>
 </div>
-
+<footer>
+    <div class="col">
+        <img src="assets/images/logo.png" alt="logo-footer" class="logo">
+     <ul>
+         <li><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></li>
+         <li><a href="https://www.facebook.com/?locale=es_LA"><i class="fa-brands fa-facebook"></i></a></li>
+         <li><a href="https://www.tiktok.com/es-419/"><i class="fa-brands fa-tiktok"></i></a></li>
+         <li><a href="https://www.youtube.com/?app=desktop&hl=es"><i class="fa-brands fa-youtube"></i></a></li>
+     </ul>
+    </div>
+    <div class="col">   
+        <h3>La Empresa</h3>
+       <ul>
+         <li><i class="fa-solid fa-circle-check"></i> Servicios</li>
+         <li><i class="fa-solid fa-circle-check"></i> Portafolio</li>
+         <li><i class="fa-solid fa-circle-check"></i> Blog</li>
+         <li><i class="fa-solid fa-circle-check"></i> Soporte</li>
+       </ul>
+    </div>
+    <div class="col">
+        <h3><i class="fa-brands fa-contao"></i>ontactanos</h3>
+        <ul>
+            <li><i class="fa-solid fa-phone"></i> 0414-220-43-69</li>
+            <li><i class="fa-solid fa-at"></i> sirypacheco01@gmail.com</li>
+            <li><i class="fa-solid fa-route"></i> Los Placeres, San Juan de los Morros, Estado Guárico</li>
+        </ul>
+    </div>
+</footer>
     
 </body>
 </html>
