--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
 
     <section class="quienes-somos">
         <article class="pd-50">
-            <img src="assets/images/desarrolladora.jpg" alt="desarrolladora-team" class="image-quienes-somos">
+            <img src="assets/images/nami.jpg" alt="desarrolladora-team" class="image-quienes-somos">
         </article>
         <article>
-            <h2>Soy tu asesora </h2>
-            <p> Soy Siry Pacheco tu programadora confiable, te ayudo en el desarrollo wed,
+            <h2>Going Merry</h2>
+            <p> Soy tu programadora confiable, te ayudo en el desarrollo wed,
                  brindo soluciones reales a problemas reales.
             </p>
-            <ul>
-                <li><i class="fa-solid fa-check"></i></i>Landing Page</li>
-                <li><i class="fa-solid fa-check"></i>Sitio Web Informativos</li>
-                <li><i class="fa-solid fa-check"></i>Desarrollo de Apps</li>
-                <li><i class="fa-solid fa-check"></i>Tienda en Linea Ecommerce</li>
+            <ul class="lh-1-5">
+                <li><i class="fa-solid fa-circle-check"></i></i>Landing Page</li>
+                <li><i class="fa-solid fa-circle-check"></i>Sitio Web Informativos</li>
+                <li><i class="fa-solid fa-circle-check"></i>Desarrollo de Apps</li>
+                <li><i class="fa-solid fa-circle-check"></i>Tienda en Linea Ecommerce</li>
             </ul>
         </article>
     </section>
@@ -48,7 +48,7 @@
                <div class="icon">
              <i class="fa-brands fa-web-awesome"></i></div>
             <h3>Sitio Web Informativo</h3>
-            <p>desarrollamos el sitio web que tu marca necesita.</p>
+            <p>Desarrollamos el sitio web que tu marca necesita.</p>
         </div>
         <div class="col">
                <div class="icon">
@@ -88,7 +88,7 @@
     </div>
     <div class="col">   
         <h3>La Empresa</h3>
-       <ul>
+       <ul class="lh-1-5">
          <li><i class="fa-solid fa-circle-check"></i> Servicios</li>
          <li><i class="fa-solid fa-circle-check"></i> Portafolio</li>
          <li><i class="fa-solid fa-circle-check"></i> Blog</li>
@@ -97,13 +97,16 @@
     </div>
     <div class="col">
         <h3><i class="fa-brands fa-contao"></i>ontactanos</h3>
-        <ul>
+        <ul class="lh-1-5">
             <li><i class="fa-solid fa-phone"></i> 0414-220-43-69</li>
             <li><i class="fa-solid fa-at"></i> sirypacheco01@gmail.com</li>
             <li><i class="fa-solid fa-route"></i> Los Placeres, San Juan de los Morros, Estado Guárico</li>
         </ul>
     </div>
 </footer>
-    
+    <div class="copyright">
+        <p class="center"><i class="fa-solid fa-copyright"></i>
+             Todos los derechos reservados. Sitio web desarrollado por Siry</p>
+    </div>
 </body>
 </html>
